# buddy_allocator

./: CMakeLists.txt  README.md
include/: BuddyAllocator.h
test/: test.cpp
